# gpt-pipeline-hub

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  apprunner.yaml  apprunner.yaml.bak  gpt-pipeline-kanban.md  pyproject.toml
gpt-pipeline-hub/: apprunner.yaml  main.py  requirements.txt
gpt-pipeline-hub/.github/workflows/: ci.yaml  evaluate-pipeline.yml
gpt-pipeline-hub/cli/: README.cli.md
gpt-pipeline-hub/docs/: README.docs.md  promt_lifestyle.md
gpt-pipeline-hub/evals/: README.evals.md
gpt-pipeline-hub/infra/: README.infra.md
gpt-pipeline-hub/prompts/01-examples/: example1.json
gpt-pipeline-hub/prompts/01-examples/industry_classification_v1/: example1.json
gpt-pipeline-hub/scripts/: README.scripts.md  eval_chain.py  eval_runner.py
gpt-pipeline-hub/static/: style.css
gpt-pipeline-hub/tests/: README.tests.md  test_prompt_quality_usecase.py
infra/: aws_iam.tf  terraform.tfstate
templates/: index.html
